<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <EditText
            android:id="@+id/old_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/old_pwd"
            android:paddingLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_shape_gray"
            android:textColor="@color/tv_mid"
            android:textSize="@dimen/search_small_text"
            android:inputType="textPassword"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/new_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/new_pwd"
            android:paddingLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_shape_gray"
            android:textColor="@color/tv_mid"
            android:textSize="@dimen/search_small_text"
            android:inputType="textPassword"
            android:maxLength="20"/>

        <EditText
            android:id="@+id/confirm_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/confirm_new_pwd"
            android:paddingLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_shape_gray"
            android:textColor="@color/tv_mid"
            android:textSize="@dimen/search_small_text"
            android:inputType="textPassword"
            android:maxLength="20"/>

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="30dp"
            android:background="@drawable/theme_bg_bt_selector"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:textSize="@dimen/search_main_text_size"/>
    </LinearLayout>
</RelativeLayout>
