<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_msg_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_exit"
        android:textColor="@color/tv_bg"
        android:lineSpacingExtra="5dp"
        android:textSize="20sp"
        android:padding="20sp"/>

    <View
        android:id="@+id/view_02"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/et_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/tv_bg"
            android:background="@drawable/item_selector"
            android:textSize="@dimen/tv_cancel_size"
            android:gravity="center"
            android:text="@string/cancel"/>

        <View
            android:id="@+id/view_01"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/et_hint"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/item_selector"
            android:layout_weight="1"
            android:textColor="@color/tv_bg"
            android:textSize="@dimen/tv_cancel_size"
            android:text="@string/confirm_non"/>
    </LinearLayout>
</LinearLayout>