<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_id_data"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/third_bar"
            android:gravity="center_vertical"
            android:padding="7dp"
            android:textColor="@android:color/white"
            android:text="@string/visit_record"
            android:textSize="18sp" />
        <ImageView
            android:id="@+id/tv_clear_record"
            android:text="@string/clear"
            android:textSize="14sp"
            android:textColor="@drawable/clear_text_color"
            android:clickable="true"
            android:gravity="center"
            android:scaleType="fitXY"
            android:paddingRight="15dip"
            android:paddingLeft="15dip"
            android:paddingBottom="8dip"
            android:paddingTop="8dip"
            android:src="@drawable/clear"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center_vertical|right"
            android:layout_width="52dip"
            android:layout_height="match_parent"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_not_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/has_not_record"
        android:textColor="@color/tv_gray"
        android:visibility="visible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_record"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:padding="5dip"
        app:layoutManager="LinearLayoutManager" />
</LinearLayout>